update qmd files and packages

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Survival = "8a913413-2070-5976-9d4c-2b364fdc2f7f"
 TableOne = "d36ae967-72a8-4ff4-a661-f51e671fe83a"
