--- a/Project.toml
+++ b/Project.toml
@@ -14,4 +14,5 @@ Survival = "8a913413-2070-5976-9d4c-2b364fdc2f7f"
 TableOne = "d36ae967-72a8-4ff4-a661-f51e671fe83a"
 Tidier = "f0413319-3358-4bb0-8e7c-0c83523a93bd"
 TidierData = "fe2206b3-d496-4ee9-a338-6a095c4ece80"
+TidierPlots = "337ecbd1-5042-4e2a-ae6f-ca776f97570a"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
