--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,19 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+QuartoNotebookRunner = "4c0109c6-14e9-4c88-93f0-2b974d3468f4"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Survival = "8a913413-2070-5976-9d4c-2b364fdc2f7f"
 TableOne = "d36ae967-72a8-4ff4-a661-f51e671fe83a"
 Tidier = "f0413319-3358-4bb0-8e7c-0c83523a93bd"
-TidierData = "fe2206b3-d496-4ee9-a338-6a095c4ece80"
-TidierPlots = "337ecbd1-5042-4e2a-ae6f-ca776f97570a"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
