--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+Mice = "d4678d24-b338-4f96-a2c8-a66549d61c16"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 QuartoNotebookRunner = "4c0109c6-14e9-4c88-93f0-2b974d3468f4"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
